# rest-routeros

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pypi.yml
RestRouterOS/: api.py
RestRouterOS/RestAdapter/: adapter.py
tests/: test_RestRouterOS.py
